  * checks/dbus.{desc,pm}:
    + [NT] Apply patch series from Simon McVittie to
      improve the dbus check.  In particular, detect dbus
      policy files that exposes CVE-2014-8148 and
      CVE-2014-8156.  (Closes: #776480)
  * checks/fields.{desc,pm}:
    + [BR] Add reference to build-depends-on-metapackage
      (Closes: #767107).
    + [BR] Check source version (Closes: #749103).
  * checks/files.{desc,pm}:
    + [BR] Rename compressed-objects.inv to
      file-should-not-be-compressed and use it for doxygen
      map.gz.  (Closes: #751949).
    + [NT] Drop special handling of t1disasm to work around
      a stack-overflow in t1disasm.
  * checks/init.d.desc:
    + [BR] Add reference to #DEBHELPER# token for
      script-in-etc-init.d-not-registered-via-update-rc.d.
      (Closes: #775467).
  * checks/patch-systems.pm:
    + [NT] Avoid crashing on debian/patches being a file.
      (Closes: #778556)
  * checks/po-debconf.pm:
    + [NT] Avoid errors from intltool-update.
      (Closes: #778558)
  * checks/script.{desc,pm}:
    + [BR] Fix some false negatives for
      command-with-path-in-maintainer-script tag.
      (Closes: #769845).
  * checks/source-copyright.{desc,pm}:
    + [BR] Fix a false positive for
      missing-license-paragraph-in-dep5-copyright tag.
      Do not allow to reference header paragraph,
      emit a specific tag.
      (Closes: #766118).
    + [BR] Detect if license short name are unique.
    + [BR] Avoid false positive license-problem-undefined-license
      for - in short license.
    + [BR] Warn when using reference to header license.
      (Closes: #769818).
  * checks/watch-file.{desc,pm}:
    + [NT] Check for watch files accessing PyPI over HTTP
      instead of HTTPS.  This check has been imported from
      lintian4python (with a different tag name).

  * collection/strings:
    + [NT] Pass "-a" to strings to avoid possible security
      issues in strings.

  * commands/reporting-{lintian-harness,sync-state}: