@@ -3,7 +3,7 @@ Priority: extra
 Section: java
 Maintainer: {$author}
 Standards-Version: {$standards_version}
-XS-Python-Version: 2.5 2.6
+XS-Python-Version: current 2.6
 Build-Depends: debhelper (>= 9)
 
 Package: {$source}
