@@ -2,4 +2,6 @@ Testname: fields-malformed-py-version
 Sequence: 6000
 Version: 1.0
 Description: Test for malformed python-version field
-Test-For: malformed-python-version
+Test-For:
+ malformed-python-version
+ python-version-current-is-deprecated
