@@ -1,1 +1,2 @@
-E: fields-malformed-py-version source: malformed-python-version 2.5 2.6
+E: fields-malformed-py-version source: malformed-python-version current 2.6
+W: fields-malformed-py-version source: python-version-current-is-deprecated
