@@ -28,6 +28,8 @@ lintian (2.5.31) UNRELEASED; urgency=medium
     + [BR] Add reference to build-depends-on-metapackage
       (Closes: #767107).
     + [BR] Check source version (Closes: #749103).
+    + [NT] Import check of "Python-version: current" being
+      deprecated from lintian4python.
   * checks/files.{desc,pm}:
     + [BR] Rename compressed-objects.inv to
       file-should-not-be-compressed and use it for doxygen
